[gd_scene load_steps=3 format=3 uid="uid://b050yh6nye05e"]

[ext_resource type="Script" path="res://scenes/Options/scripts/options.gd" id="1_kbn2v"]
[ext_resource type="PackedScene" uid="uid://dvcshj2vx3dnv" path="res://objects/OptionSlider/OptionSlider.tscn" id="1_tto8t"]

[node name="Options" type="CanvasLayer"]
script = ExtResource("1_kbn2v")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -250.0
offset_right = 250.0
grow_horizontal = 2
theme_override_constants/margin_top = 20

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer"]
custom_minimum_size = Vector2(500, 300)
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 45

[node name="FoV" parent="Control/MarginContainer/VBoxContainer" instance=ExtResource("1_tto8t")]
layout_mode = 2
label = "FoV:"
default_value = 50.0
min_value = 1.0
max_value = 100.0
min_slider_value = 1.0

[node name="Sound" parent="Control/MarginContainer/VBoxContainer" instance=ExtResource("1_tto8t")]
layout_mode = 2
label = "Sound:"
default_value = 50.0
max_value = 100.0

[node name="MarginContainer2" type="MarginContainer" parent="Control"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -63.0
offset_top = -29.0
offset_right = 63.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_bottom = 10

[node name="Button" type="Button" parent="Control/MarginContainer2"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
text = "Back"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[node name="AudioListener2D" type="AudioListener2D" parent="."]

[connection signal="value_changed" from="Control/MarginContainer/VBoxContainer/FoV" to="." method="_on_zoom_value_changed"]
[connection signal="value_changed" from="Control/MarginContainer/VBoxContainer/Sound" to="." method="_on_sound_value_changed"]
[connection signal="pressed" from="Control/MarginContainer2/Button" to="." method="_on_button_back_pressed"]
